2005-05-25  Richard Sandiford  <rsandifo@redhat.com>

	* config/rs6000/rs6000.opt (mprioritize-restricted-insns=): Fix typo.

2005-05-25  Daniel Berlin  <dberlin@dberlin.org>
	    Jeff Law  <law@redhat.com>

	* tree-cfg.c (verify_expr, case ADDR_EXPR): Verify invariant,
	constant and side_effects of the ADDR_EXPR are consistent.

	* tree-nested.c (convert_local_reference): Set CURRENT_FUNCTION_DECL
	appropriately around calls to recompute_tree_invarant_for_addr_expr.

2005-05-25  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390.c (GP_ARG_NUM_REG, FP_ARG_NUM_REG): New defines.
	(s390_function_arg, s390_gimplify_va_arg): Use them.
	(s390_register_info): Save only required subset of argument
	registers into save area for va_list.
	(s390_va_start): Initialize only required elements of va_list struct.
	(s390_build_builtin_va_list): Set va_list_[gf]pr_counter_field.

2005-05-25  Ulrich Weigand  <uweigand@de.ibm.com>

	* reload1.c (verify_initial_elim_offsets): Return boolean status
	instead of aborting.
	(reload): Adapt verify_initial_elim_offsets call site.  Restart
	main loop if some initial elimination offsets changed.

2005-05-25  Adam Nemet  <anemet@lnxw.com>

	* config/rs6000/lynx.h (CC1_SPEC): Use -maix-struct-return instead
	of -mno-svr4-struct-return.

2005-05-25  Daniel Berlin  <dberlin@dberlin.org>

	Fix PR tree-optimization/21705
	
	* tree-ssa-pre.c (in_fre): New static variable.
	(create_value_expr_from): Recursively value number reference ops
	in argument lists.
	(can_value_number_call): Temporary restrict only exists for
	PRE, not FRE.

2005-05-25  Kazu Hirata  <kazu@cs.umass.edu>

	* tree-into-ssa.c (rewrite_into_ssa, update_ssa): Replace
	sizeof (bitmap *) with sizeof (bitmap).

2005-05-25  Daniel Berlin <dberlin@dberlin.org>

	* lambda-code.c (perfect_nestify): Call update_stmt on the exit
	condition.

2005-05-25  Adrian Straetling  <straetling@de.ibm.com>

	* config/s390/s390.c (TARGET_INSN_VALID_WITHIN_DOLOOP): Set to
	hook_bool_rtx_true.
